objects/Event__c.object
<CustomObject>
    <description>Object for events</description>
    <fields>
        <fullName>End__c</fullName>
        <description>This is the end date of the event.</description>
        <inlineHelpText>This is the end date of the event.</inlineHelpText>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>This is to identify if the event is live In-Person or via Virtual.</description>
        <inlineHelpText>This is to identify if the event is live In-Person or via Virtual.</inlineHelpText>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>This is to identify how active the event.</description>
        <inlineHelpText>This is to identify how active the event.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To know if the event is live or not.</description>
        <inlineHelpText>Check if the event is live.</inlineHelpText>
        <label>Live?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Verified__c</fullName>
        <description>This to identify if the location of the event was verified.</description>
        <formula>Location__r.Verified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This to identify if the location of the event was verified.</inlineHelpText>
        <label>Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the location of the event.</description>
        <inlineHelpText>This is the location of the event.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Seats__c</fullName>
        <description>Seats available</description>
        <inlineHelpText>Numbers of the guests.</inlineHelpText>
        <label>Max Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Event Name.</description>
        <inlineHelpText>This is the event name.</inlineHelpText>
        <label>Name</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_People_Attending__c</fullName>
        <description>This is the count or the summary of all attendees.</description>
        <inlineHelpText>This is the count or the summary of all attendees.</inlineHelpText>
        <label>Number of People Attending</label>
        <summaryForeignKey>Event_Attendee__c.Event_for_Pro_FIT__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Organizer information.</description>
        <inlineHelpText>This is the person who will organize this event.</inlineHelpText>
        <label>Organizer</label>
        <referenceTo>Event_Organizer__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reccurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To know if the event is recurring.</description>
        <inlineHelpText>Check if the event is recurring.</inlineHelpText>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Seats__c</fullName>
        <description>This is the remaining seats</description>
        <formula>Max_Seats__c  -  Number_of_People_Attending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is to identify how many seats are available.</inlineHelpText>
        <label>Remaining Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>This is the start date of the event.</description>
        <inlineHelpText>This is the start date of the event.</inlineHelpText>
        <label>Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <description>This will pop up if there is a deleted event automatically.</description>
        <formula>IF( ISPICKVAL( Status__c , &apos;Deleted&apos;) , (IMAGE(&quot;https://www.pngitem.com/pimgs/m/508-5080910_red-flag-red-flag-waving-gif-hd-png.png&quot;,&quot;Red Flag&quot;, 30,36)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If there is a red flag, it means that this event was automatically deleted due to inactivity.</inlineHelpText>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of teh event.</description>
        <inlineHelpText>This is to identify the status of the event.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Post Poned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event for Pro FIT</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Event-{00000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_date_must_be_1_day_ahead_of_Startdat</fullName>
        <active>true</active>
        <description>End Date/Time must be at-least 1 day ahead of Start Date/Time ( If there is a value in End Date/Time field )</description>
        <errorConditionFormula>AND(  DATEVALUE(End__c ) &lt; (DATEVALUE( Start__c ) + 1), NOT (ISNULL(End__c)  ) )</errorConditionFormula>
        <errorDisplayField>End__c</errorDisplayField>
        <errorMessage>End Date/Time must be at-least 1 day ahead of Start Date/Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Event_type_In_Person_Fill_Location</fullName>
        <active>true</active>
        <description>If event type is In-Person, User must select location.</description>
        <errorConditionFormula>AND(ISBLANK( Location__c ), ISPICKVAL( Event_Type__c ,&quot;In-Person&quot;))</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>You must select Location if the Event-type is In-Person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Location_Active_Event_Type_In_person</fullName>
        <active>true</active>
        <description>If there is a Location, the event type is mandatory and should be In-Person</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Location__c )), ISPICKVAL( Event_Type__c ,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>You must select Event type as In-Person if you want to add location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Virtual_Prevent_User_To_Select_Locati</fullName>
        <active>true</active>
        <description>If event type is Virtual, prevent User to select location.</description>
        <errorConditionFormula>AND(NOT( ISBLANK( Location__c ) ), ISPICKVAL( Event_Type__c  ,&quot;Virtual&quot;))</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>You are not allowed to select location if the event type is Virtual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recurring_Checked_Fill_Frequency_Field</fullName>
        <active>true</active>
        <description>If Recurring? checkbox is checked then user must need to fill Frequency field.</description>
        <errorConditionFormula>AND(
   Reccurring__c = TRUE,
  OR(
  ISPICKVAL( Frequency__c , &quot;&quot;)
 )
)</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>If Recurring is checked, you must select Frequency type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recurring_UnChecked_Dont_Fill_Frequency</fullName>
        <active>true</active>
        <description>If Recurring? checkbox is unchecked, User can not select Frequency field.</description>
        <errorConditionFormula>AND(
 Reccurring__c = FALSE,
 OR(
 NOT( ISBLANK( TEXT( Frequency__c ) ) )
)
)</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>You are not allowed to select Frequency type if Recurring is not checked.</errorMessage>
    </validationRules>
</CustomObject>